--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-responsive-carousel": "^3.1.51",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
